typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty4.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            40,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty4.ts:3:6
  |
3 |     [Symbol.isRegExp]: string;
  |      ^^^^^^

